--- a/.github/workflows/hello_wordl.yaml
+++ b/.github/workflows/hello_wordl.yaml
@@ -14,11 +14,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: hello world
         run: echo "Hello wordls"
-        shell: cmd
+        shell: powershell
 
   goodbye:
     runs-on: ubuntu-latest
     steps:
       - name: goodbye world
         run: echo "Goodbye world"
-        shell: cmd
+        shell: powershell
