--- a/.github/workflows/hello_wordl.yaml
+++ b/.github/workflows/hello_wordl.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   hello:
-    runs-on: windows
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: hello world
