--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -9,5 +9,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: dump github context"
-        run: echo '${{ toJson(github.event) }} | jq
+        run: echo '${{ toJson(github.event) }}' | jq
         shell: bash
