testing service upload

--- a/exercise1.Tests/exercise1.Tests.csproj
+++ b/exercise1.Tests/exercise1.Tests.csproj
@@ -42,4 +42,10 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="test.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
