--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -39,6 +39,6 @@ jobs:
     - name: Deployment
       uses: azure/webapps-deploy@v2
       with:
-        app-name: ${{ AZURE_WEBAPP_NAME }}
+        app-name: 'michal-exercise-1'
         publish-profile: ${{ secret.AZURE_PUBLISH_PROFILE }}
-        package: ${{ AZURE_WEBAPP_PACKAGE_PATH }}
+        package: './publish'
