--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,5 +37,5 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'michal-exercise-1'
-        publish-profile: ${{ secret.AZURE_PUBLISH_PROFILE }}
+        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
         package: './publish'
