--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,7 +8,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+  workflow_dispatch:
 
 jobs:
   publish:
@@ -31,11 +31,11 @@ jobs:
       run: dotnet test --no-build --verbosity normal
     
     - name: Publish
-      run: dotnet publish --configuration Release --no-build --output './publish'
+      run: dotnet publish --no-build --output './publish'
 
     - name: Deployment
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'michal-exercise-1'
         publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-        package: './publish'
+        package: .
