--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,4 +38,4 @@ jobs:
       with:
         app-name: 'michal-exercise-1'
         publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-        package: .
+        package: ".publish"
