--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -53,5 +53,5 @@ jobs:
         with:
           app-name: 'michal-exercise-1'
           slot-name: 'production'
-          publish-profile: ${{ secrets.AzureAppService_PublishProfile_59ad8d54da2140219803d65989e8f37b }}
+          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           package: .
