--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,6 +22,9 @@ jobs:
           dotnet-version: '6.0.x'
           include-prerelease: true
 
+      - name: Restore
+        run: dotnet restore
+      
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
