--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -6,7 +6,7 @@ name: Build and deploy ASP.Net Core app to Azure Web App - michal-exercise-1
 on:
   push:
     branches:
-      - zad1
+      - main
   workflow_dispatch:
 
 jobs:
