--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,9 +37,14 @@ jobs:
     needs: build
     
     steps:
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'michal-exercise-1'
-          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-          package: .
+        - name: Download artifact from build job
+          uses: actions/download-artifact@v3
+          with:
+            name: .net-app
+    
+        - name: Deploy to Azure Web App
+          uses: azure/webapps-deploy@v2
+          with:
+            app-name: 'michal-exercise-1'
+            publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+            package: .
